More route updates, more Swagger docs
